# fl-fashionmnist-flower

./: .gitignore  analysis.py  generate_data.py  pyproject.toml
pytorchexample/: client_app.py  data.py  model.py  server_app.py
results/vary_alpha/: alpha_0.1.json  alpha_100.json  alpha_5.0.json
results/vary_clients/: clients_20.json  clients_5.json  clients_50.json
results/vary_fraction/: fraction_0.1.json  fraction_0.5.json  fraction_1.0.json
results/vary_optimizer/: fedavg_adam.json  fedavg_sgd.json  fedsgd.json
